Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • CMake CMake
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,927
    • Issues 3,927
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 19
    • Merge requests 19
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • External wiki
    • External wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • CMake
  • CMakeCMake
  • Issues
  • #18630
Closed
Open
Created Nov 25, 2018 by Tobias C. Berner@tcbernerContributor

daze -- uic not found with cmake-3.13

Hi there

Trying to build zeal [1] with cmake 3.13 on FreeBSD fails with uic not being found:

CMake Error: AutoUic (Registry): The uic executable "" does not exist

A complete build log can be found here [2]. This seems to be a regression in 3.13, as it worked with 3.12.x.

mfg Tobias

[1] https://github.com/zealdocs/zeal [2] http://package23.nyi.freebsd.org/data/112i386-default-PR233411/2018-11-24_07h42m54s/logs/errors/zeal-0.6.0_1.log

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking